--- a/.github/workflows/sync-clash.yml
+++ b/.github/workflows/sync-clash.yml
@@ -12,15 +12,36 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Sync Clash repository
         run: |
-          mkdir -p clash
-          cd clash
-          if [ -z "$(ls -A)" ]; then
-            git clone https://github.com/liandu2024/clash.git .
+          # 创建临时目录
+          TEMP_DIR=$(mktemp -d)
+          
+          # 克隆 clash 仓库到临时目录
+          git clone https://github.com/liandu2024/clash.git "$TEMP_DIR"
+          
+          # 复制文件到项目根目录（排除 .git 目录和 .github 目录）
+          rsync -av --exclude='.git' --exclude='.github' "$TEMP_DIR/" ./
+          
+          # 清理临时目录
+          rm -rf "$TEMP_DIR"
+          
+      - name: Commit changes
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          
+          # 添加所有更改，但排除 .github 目录
+          git add -A
+          git reset .github/
+          
+          # 如果有更改则提交
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
           else
-            git remote set-url origin https://github.com/liandu2024/clash.git
-            git fetch origin
-            git reset --hard origin/main
+            git commit -m "chore: sync clash repository"
+            git push
           fi
