--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
-# 只忽略 .github 目录
-.github/
+# 忽略所有文件和目录
+*
+
+# 不忽略 .github 目录
+!.github/
+!.github/**
+
+# 不忽略 clash 目录
+!clash/
+!clash/**
+
 # 不忽略 .gitignore 文件本身
 !.gitignore 
