fix: add permissions to workflow

--- a/.github/workflows/sync-clash.yml
+++ b/.github/workflows/sync-clash.yml
@@ -5,6 +5,9 @@ on:
     - cron: '0 0 * * *'  # 每天午夜运行
   workflow_dispatch:      # 允许手动触发
 
+permissions:
+  contents: write
+
 jobs:
   sync:
     runs-on: ubuntu-latest
@@ -14,6 +17,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Sync Clash repository
         run: |
