--- a/.github/workflows/sync-oktvbox.yml
+++ b/.github/workflows/sync-oktvbox.yml
@@ -1,64 +1,53 @@
-name: Sync oktvbox Release
+name: 'Sync oktvbox Release'
 
 on:
   schedule:
     - cron: '0 */6 * * *'  # 每6小时运行一次
-  workflow_dispatch:  # 允许手动触发
+  workflow_dispatch:      # 允许手动触发
+
+permissions:
+  contents: write
 
 jobs:
   sync:
     runs-on: ubuntu-latest
     
     steps:
-      - name: 检出代码
+      - name: Checkout repository
         uses: actions/checkout@v4
-        
-      - name: 创建目标目录
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Sync oktvbox files
         run: |
+          # 创建临时目录
+          TEMP_DIR=$(mktemp -d)
+          
+          # 克隆源仓库到临时目录
+          git clone --depth 1 --branch okjack --single-branch https://github.com/FongMi/Release.git "$TEMP_DIR"
+          
+          # 确保目标目录存在
           mkdir -p "Tvbox/Apk/Ok影视"
           
-      - name: 同步 FongMi Release 仓库
+          # 复制文件
+          cp -rf "$TEMP_DIR/apk/"* "Tvbox/Apk/Ok影视/"
+          
+          # 清理临时目录
+          rm -rf "$TEMP_DIR"
+          
+      - name: Commit changes
         run: |
-          # 克隆源仓库的特定分支和目录
-          git clone --depth 1 --branch okjack --single-branch https://github.com/FongMi/Release.git temp_repo
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           
-          # 进入临时仓库目录
-          cd temp_repo
+          # 添加更改
+          git add "Tvbox/Apk/Ok影视"
           
-          # 复制文件并记录每个文件的提交信息
-          for file in apk/*; do
-            if [ -f "$file" ]; then
-              commit_msg=$(git log -1 --pretty=format:"%s" -- "$file")
-              commit_hash=$(git log -1 --pretty=format:"%h" -- "$file")
-              commit_date=$(git log -1 --pretty=format:"%ai" -- "$file")
-              echo "同步文件: $file"
-              echo "提交信息: $commit_msg"
-              echo "提交哈希: $commit_hash"
-              echo "提交日期: $commit_date"
-              echo "------------------------"
-            fi
-          done
-          
-          cd ..
-          
-          # 复制 apk 目录内容到目标目录
-          cp -rf temp_repo/apk/* "Tvbox/Apk/Ok影视"
-          
-          # 清理临时文件
-          rm -rf temp_repo
-          
-      - name: 检查是否有更改
-        id: check_changes
-        run: |
-          git add .
-          git status --porcelain
-          echo "changes=$(git status --porcelain | wc -l)" >> $GITHUB_OUTPUT
-          
-      - name: 提交更改
-        if: steps.check_changes.outputs.changes > 0
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add .
-          git commit -m "同步 FongMi Release 更新"
-          git push 
+          # 如果有更改则提交
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "chore: sync oktvbox release"
+            git push
+          fi
