--- a/.github/workflows/sync-tvbox.yml
+++ b/.github/workflows/sync-tvbox.yml
@@ -1,70 +1,78 @@
-name: Sync tvbox Tomorrow
+name: 'Sync tvbox Tomorrow'
 
 on:
   schedule:
     - cron: '0 */6 * * *'  # 每6小时运行一次
-  workflow_dispatch:  # 允许手动触发
+  workflow_dispatch:      # 允许手动触发
+
+permissions:
+  contents: write
 
 jobs:
   sync:
     runs-on: ubuntu-latest
     
     steps:
-      - name: 检出代码
+      - name: Checkout repository
         uses: actions/checkout@v4
-        
-      - name: 创建目标目录
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Sync tvbox files
         run: |
+          # 创建临时目录
+          TEMP_DIR=$(mktemp -d)
+          
+          # 克隆源仓库到临时目录
+          git clone --depth 1 https://github.com/tushen6/Tomorrow.git "$TEMP_DIR"
+          
+          # 确保目标目录存在
           mkdir -p "Tvbox/DataSource/DataA"
           
-      - name: 同步 Tomorrow 仓库
-        run: |
-          # 克隆源仓库
-          git clone --depth 1 https://github.com/tushen6/Tomorrow.git temp_repo
+          # 复制文件
+          cp -rf "$TEMP_DIR/"* "Tvbox/DataSource/DataA/"
           
-          # 获取最后一次提交信息
-          cd temp_repo
-          LAST_COMMIT_MSG=$(git log -1 --pretty=format:"%s")
-          LAST_COMMIT_HASH=$(git log -1 --pretty=format:"%h")
-          cd ..
-          
-          # 复制所有文件到目标目录
-          cp -rf temp_repo/* "Tvbox/DataSource/DataA/"
-          
-          # 在目标目录中添加标注文件
+          # 添加标注文件
           echo "# 这是多仓配置文件" > "Tvbox/DataSource/DataA/lmw.json.info"
           echo "# 这是单仓配置文件" > "Tvbox/DataSource/DataA/lzxw.json.info"
           
-          # 修改 README.md 中的订阅地址
+          # 更新 README.md 中的订阅地址
           if [ -f "Tvbox/DataSource/DataA/README.md" ]; then
-            # 获取当前仓库信息
             REPO_OWNER=$(echo $GITHUB_REPOSITORY | cut -d '/' -f 1)
             REPO_NAME=$(echo $GITHUB_REPOSITORY | cut -d '/' -f 2)
             
-            # 替换订阅地址
             sed -i "s|https://github\.moeyy\.xyz/https://raw\.githubusercontent\.com/tushen6/Tomorrow/master/lmw\.json|https://github.moeyy.xyz/https://raw.githubusercontent.com/${REPO_OWNER}/${REPO_NAME}/master/Tvbox/DataSource/DataA/lmw.json|g" "Tvbox/DataSource/DataA/README.md"
             sed -i "s|https://github\.moeyy\.xyz/https://raw\.githubusercontent\.com/tushen6/Tomorrow/master/lzxw\.json|https://github.moeyy.xyz/https://raw.githubusercontent.com/${REPO_OWNER}/${REPO_NAME}/master/Tvbox/DataSource/DataA/lzxw.json|g" "Tvbox/DataSource/DataA/README.md"
           fi
           
-          # 保存提交信息到环境变量
-          echo "COMMIT_MSG=$LAST_COMMIT_MSG" >> $GITHUB_ENV
-          echo "COMMIT_HASH=$LAST_COMMIT_HASH" >> $GITHUB_ENV
+          # 获取源仓库最后一次提交信息
+          COMMIT_MSG=$(cd "$TEMP_DIR" && git log -1 --pretty=format:"%s")
+          COMMIT_HASH=$(cd "$TEMP_DIR" && git log -1 --pretty=format:"%h")
           
-          # 清理临时文件
-          rm -rf temp_repo
+          # 清理临时目录
+          rm -rf "$TEMP_DIR"
           
-      - name: 检查是否有更改
-        id: check_changes
+          # 保存提交信息到文件
+          echo "$COMMIT_MSG" > /tmp/commit_msg
+          echo "$COMMIT_HASH" > /tmp/commit_hash
+          
+      - name: Commit changes
         run: |
-          git add .
-          git status --porcelain
-          echo "changes=$(git status --porcelain | wc -l)" >> $GITHUB_OUTPUT
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           
-      - name: 提交更改
-        if: steps.check_changes.outputs.changes > 0
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add .
-          git commit -m "自动同步: Tomorrow 仓库更新 | 源仓库提交信息: ${{ env.COMMIT_MSG }} | 源仓库提交Hash: ${{ env.COMMIT_HASH }}"
-          git push
+          # 读取提交信息
+          COMMIT_MSG=$(cat /tmp/commit_msg)
+          COMMIT_HASH=$(cat /tmp/commit_hash)
+          
+          # 添加更改
+          git add "Tvbox/DataSource/DataA"
+          
+          # 如果有更改则提交
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "chore: sync tvbox tomorrow | 源提交: $COMMIT_MSG | Hash: $COMMIT_HASH"
+            git push
+          fi
